<resources>
    <string name="app_name">GADs LeaderBoard</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="_223_learning_hours_kenya">223 learning hours, Kenya.</string>
    <string name="john_doe">John Doe</string>
    <string name="badge_image">Badge Image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="back_button_desc">Back Button</string>
    <string name="gads_logo_desc">GADs Logo</string>
    <string name="submit_button_desc">Submit Button</string>
    <string name="project_submission">Project Submission</string>
    <string name="learning_hours">learning hours</string>
    <string name="skill_iq_score">skill IQ Score</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="cancel_image_button">Cancel Image Button</string>
    <string name="splash_screen_gads_logo">Splash Screen Gads Logo</string>
</resources>