<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_csad"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/cancel_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="45dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_baseline_cancel_24"
                android:contentDescription="@string/cancel_image_button"/>

            <LinearLayout
                android:id="@+id/are_you_sure_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/are_you_sure"
                    android:textSize="29sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:src="@drawable/question_mark" />

            </LinearLayout>


            <Button
                android:id="@+id/confirm_submit_btn"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/are_you_sure_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:background="@drawable/confirm_submit_btn_bk"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/lighter_dark_yellow"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</layout>